Choix du nombre
input pour que l'utilisateur choisisse le nombre d'éléments a vérifier

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   </head>
   <body>
     <div class="container"></div>
+    <div class="limite">
+      <input type="number" placeholder="Nombre limite (max 5000)" max="5000" min="1" class="nombre" autofocus />
+      <input type="button" class="bouton" value="Ok" />
+    </div>
+
     <script src="app.js"></script>
   </body>
 </html>
